--- a/WebApplication3/Views/Shared/_Layout.cshtml
+++ b/WebApplication3/Views/Shared/_Layout.cshtml
@@ -17,15 +17,15 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Nombre de la aplicación", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Nombre de la aplicación", "Index", "Discoes", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
+                    <li>@Html.ActionLink("Disco", "Index", "Discoes")</li>
                     <li>@Html.ActionLink("Artistas", "Index", "Artistas")</li>
                     <li>@Html.ActionLink("Categorias", "Index", "Categorias")</li>
                     <li>@Html.ActionLink("Clientes", "Index", "Clientes")</li>
                     <li>@Html.ActionLink("Detallepedido", "Index", "Detallepedidoes")</li>
-                    <li>@Html.ActionLink("Disco", "Index", "Discoes")</li>
                     <li>@Html.ActionLink("Empleado", "Index", "Empleadoes")</li>
                     <li>@Html.ActionLink("Pedido", "Index", "Pedidoes")</li>
                 </ul>
